--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "nak": "git+https://github.com/cloud9ide/nak.git#6deef931594",
         "netutil": "~0.0.2",
         "optimist": "~0.6.0",
+        "pty.js": "0.3.1",
         "qs": "0.6.6",
         "rusha": "^0.8.3",
         "send": "~0.1.4",
